# stapel-chat

./: CHANGELOG.md  CONFIG.MD  MODULE.md  Makefile  README.md  __init__.py  _capabilities.py  _codegen.py  _codegen_settings.py  actions.py  admin.py  apps.py  checks.py  codegen_urls.py  conf.py  conftest.py  consumers.py  dto.py  errors.py  functions.py  gdpr.py  models.py  pyproject.toml  realtime.py  scope.py  serializers.py  services.py  urls.py  urls_v1.py  views.py
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json  capabilities.meta.json  errors.json  schema.json
migrations/: 0001_initial.py
schemas/consumes/: user.deleted.json
schemas/emits/: chat.message.json  chat.support.assigned.json
tests/: test_checks.py  test_contract.py  test_conversations.py  test_messages.py  test_read_unread.py  test_realtime.py  test_seq_and_outbox.py  test_support.py  urls.py
